feat(auth): implement dynamic role-based authorities in UserDetailsImpl